--- a/plugins/node/opentelemetry-instrumentation-fastify/package.json
+++ b/plugins/node/opentelemetry-instrumentation-fastify/package.json
@@ -12,7 +12,9 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "precompile": "tsc --version && lerna run version:update --scope @opentelemetry/instrumentation-fastify --include-dependencies",
     "prepare": "npm run compile",
-    "test": "nyc ts-mocha -p tsconfig.json 'test/**/*.test.ts'",
+    "test:cjs": "nyc ts-mocha -p tsconfig.json 'test/**/*.test.ts'",
+    "test:esm": "nyc node --experimental-loader=@opentelemetry/instrumentation/hook.mjs ./node_modules/mocha/bin/mocha 'test/**/*.test.mjs'",
+    "test": "npm run test:cjs && npm run test:esm",
     "version:update": "node ../../../scripts/version-update.js",
     "prewatch": "npm run precompile",
     "watch": "tsc -w"
